pkg/manifests/assets/gateway-api/gateway-networkpolicy-allow.yaml
# Istio Pods for Gateway API
#  Egress to api server and everything (routes set endpoints, so can be literally anything)
#  Ingress need to be wildcarded as well since the ports are configurable
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {}
  # name and namespace set at runtime
spec:
  # selector set at runtime
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
