pkg/manifests/assets/gateway-api/validating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openshift-ingress-operator-gatewayapi-crd-admission
spec:
  matchConstraints:
    matchPolicy: Equivalent
    resourceRules:
    - apiGroups:   ["apiextensions.k8s.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE","UPDATE","DELETE"]
      resources:   ["customresourcedefinitions"]
  matchConditions:
    - name: "check-only-gateway-api-crds"
      expression: "(request.operation == 'DELETE' ? oldObject : object).spec.group == 'gateway.networking.k8s.io'"
  validations:
    - expression: "has(request.userInfo.username) && (request.userInfo.username == 'system:serviceaccount:openshift-ingress-operator:ingress-operator')"
      message: "Gateway API Custom Resource Definitions are managed by the Ingress Operator and may not be modified"
      reason: Forbidden
  failurePolicy: Fail
